@@ -25,6 +25,7 @@ import groovy.lang.MetaClassRegistry;
 import groovy.lang.MetaClassRegistryChangeEvent;
 import groovy.lang.MetaClassRegistryChangeEventListener;
 import groovy.lang.MetaMethod;
+import org.apache.groovy.util.SystemUtil;
 import org.codehaus.groovy.classgen.Verifier;
 import org.codehaus.groovy.reflection.CachedClass;
 import org.codehaus.groovy.reflection.CachedMethod;
@@ -43,28 +44,33 @@ import org.codehaus.groovy.vmplugin.VMPluginFactory;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Set;
 
 /**
- * A registry of MetaClass instances which caches introspection &
+ * A registry of MetaClass instances which caches introspection and
  * reflection information and allows methods to be dynamically added to
  * existing classes at runtime
  */
 public class MetaClassRegistryImpl implements MetaClassRegistry{
     /**
-     * @deprecated Use {@link ExtensionModuleScanner#MODULE_META_INF_FILE instead}
+     * @deprecated Use {@link ExtensionModuleScanner#MODULE_META_INF_FILE} instead
      */
     @Deprecated
     public static final String MODULE_META_INF_FILE = "META-INF/services/org.codehaus.groovy.runtime.ExtensionModule";
     private static final MetaClass[] EMPTY_METACLASS_ARRAY = new MetaClass[0];
     private static final MetaClassRegistryChangeEventListener[] EMPTY_METACLASSREGISTRYCHANGEEVENTLISTENER_ARRAY = new MetaClassRegistryChangeEventListener[0];
+    public static final String EXTENSION_DISABLE_PROPERTY = "groovy.extension.disable";
 
     private final boolean useAccessible;
 
@@ -75,6 +81,9 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
     private final LinkedList<MetaClassRegistryChangeEventListener> nonRemoveableChangeListenerList = new LinkedList<MetaClassRegistryChangeEventListener>();
     private final ManagedConcurrentLinkedQueue<MetaClass> metaClassInfo = new ManagedConcurrentLinkedQueue<MetaClass>(ReferenceBundle.getWeakBundle());
     private final ExtensionModuleRegistry moduleRegistry = new ExtensionModuleRegistry();
+    private final String disabledString = SystemUtil.getSystemPropertySafe(EXTENSION_DISABLE_PROPERTY);
+    private final boolean disabling = disabledString != null;
+    private final Set<String> disabledNames = disabling ? new HashSet<>(Arrays.asList(disabledString.split(","))) : null;
 
     public static final int LOAD_DEFAULT = 0;
     public static final int DONT_LOAD_DEFAULT = 1;
@@ -96,7 +105,7 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
     public MetaClassRegistryImpl(boolean useAccessible) {
         this(LOAD_DEFAULT, useAccessible);
     }
-    
+
     public MetaClassRegistryImpl(final int loadDefault, final boolean useAccessible) {
         this.useAccessible = useAccessible;
 
@@ -134,25 +143,23 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
         ClassInfo.getClassInfo(ExpandoMetaClass.class).setStrongMetaClass(emcMetaClass);
 
 
-        addNonRemovableMetaClassRegistryChangeEventListener(new MetaClassRegistryChangeEventListener(){
-            public void updateConstantMetaClass(MetaClassRegistryChangeEvent cmcu) {
-                // The calls to DefaultMetaClassInfo.setPrimitiveMeta and sdyn.setBoolean need to be
-                // ordered. Even though metaClassInfo is thread-safe, it is included in the block
-                // so the meta classes are added to the queue in the same order.
-                synchronized (metaClassInfo) {
-                   metaClassInfo.add(cmcu.getNewMetaClass());
-                   DefaultMetaClassInfo.getNewConstantMetaClassVersioning();
-                   Class c = cmcu.getClassToUpdate();
-                   DefaultMetaClassInfo.setPrimitiveMeta(c, cmcu.getNewMetaClass()==null);
-                   Field sdyn;
-                   try {
-                       sdyn = c.getDeclaredField(Verifier.STATIC_METACLASS_BOOL);
-                       sdyn.setBoolean(null, cmcu.getNewMetaClass()!=null);
-                   } catch (Throwable e) {
-                       //DO NOTHING
-                   }
+        addNonRemovableMetaClassRegistryChangeEventListener(cmcu -> {
+            // The calls to DefaultMetaClassInfo.setPrimitiveMeta and sdyn.setBoolean need to be
+            // ordered. Even though metaClassInfo is thread-safe, it is included in the block
+            // so the meta classes are added to the queue in the same order.
+            synchronized (metaClassInfo) {
+               metaClassInfo.add(cmcu.getNewMetaClass());
+               DefaultMetaClassInfo.getNewConstantMetaClassVersioning();
+               Class c = cmcu.getClassToUpdate();
+               DefaultMetaClassInfo.setPrimitiveMeta(c, cmcu.getNewMetaClass()==null);
+               Field sdyn;
+               try {
+                   sdyn = c.getDeclaredField(Verifier.STATIC_METACLASS_BOOL);
+                   sdyn.setBoolean(null, cmcu.getNewMetaClass()!=null);
+               } catch (Throwable e) {
+                   //DO NOTHING
+               }
 
-                }
             }
         });
    }
@@ -190,7 +197,7 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
                throw new GroovyRuntimeException("Could not instantiate custom Metaclass creation handle: "+ e, e);
            }
     }
-    
+
     private void registerMethods(final Class theClass, final boolean useMethodWrapper, final boolean useInstanceMethods, Map<CachedClass, List<MetaMethod>> map) {
         if (useMethodWrapper) {
             // Here we instantiate objects representing MetaMethods for DGM methods.
@@ -200,8 +207,9 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
                 List<GeneratedMetaMethod.DgmMethodRecord> records = GeneratedMetaMethod.DgmMethodRecord.loadDgmInfo();
 
                 for (GeneratedMetaMethod.DgmMethodRecord record : records) {
+                    if (disabling && disabledNames.contains(record.methodName)) continue;
                     Class[] newParams = new Class[record.parameters.length - 1];
-                    System.arraycopy(record.parameters, 1, newParams, 0, record.parameters.length-1);
+                    System.arraycopy(record.parameters, 1, newParams, 0, newParams.length);
 
                     MetaMethod method = new GeneratedMetaMethod.Proxy(
                             record.className,
@@ -211,11 +219,7 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
                             newParams
                     );
                     final CachedClass declClass = method.getDeclaringClass();
-                    List<MetaMethod> arr = map.get(declClass);
-                    if (arr == null) {
-                        arr = new ArrayList<MetaMethod>(4);
-                        map.put(declClass, arr);
-                    }
+                    List<MetaMethod> arr = map.computeIfAbsent(declClass, k -> new ArrayList<MetaMethod>(4));
                     arr.add(method);
                     instanceMethods.add(method);
                 }
@@ -229,14 +233,11 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
 
             for (CachedMethod method : methods) {
                 final int mod = method.getModifiers();
-                if (Modifier.isStatic(mod) && Modifier.isPublic(mod) && method.getCachedMethod().getAnnotation(Deprecated.class) == null) {
+                if (Modifier.isStatic(mod) && Modifier.isPublic(mod) && method.getAnnotation(Deprecated.class) == null) {
+                    if (disabling && disabledNames.contains(method.getName())) continue;
                     CachedClass[] paramTypes = method.getParameterTypes();
                     if (paramTypes.length > 0) {
-                        List<MetaMethod> arr = map.get(paramTypes[0]);
-                        if (arr == null) {
-                            arr = new ArrayList<MetaMethod>(4);
-                            map.put(paramTypes[0], arr);
-                        }
+                        List<MetaMethod> arr = map.computeIfAbsent(paramTypes[0], k -> new ArrayList<MetaMethod>(4));
                         if (useInstanceMethods) {
                             final NewInstanceMetaMethod metaMethod = new NewInstanceMetaMethod(method);
                             arr.add(metaMethod);
@@ -254,19 +255,16 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
 
     private void createMetaMethodFromClass(Map<CachedClass, List<MetaMethod>> map, Class aClass) {
         try {
-            MetaMethod method = (MetaMethod) aClass.newInstance();
+            MetaMethod method = (MetaMethod) aClass.getDeclaredConstructor().newInstance();
             final CachedClass declClass = method.getDeclaringClass();
-            List<MetaMethod> arr = map.get(declClass);
-            if (arr == null) {
-                arr = new ArrayList<MetaMethod>(4);
-                map.put(declClass, arr);
-            }
+            List<MetaMethod> arr = map.computeIfAbsent(declClass, k -> new ArrayList<MetaMethod>(4));
             arr.add(method);
             instanceMethods.add(method);
-        } catch (InstantiationException | IllegalAccessException e) { /* ignore */
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) { /* ignore */
         }
     }
 
+    @Override
     public final MetaClass getMetaClass(Class theClass) {
         return ClassInfo.getClassInfo(theClass).getMetaClass();
     }
@@ -277,12 +275,12 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
 
     /**
      * if oldMc is null, newMc will replace whatever meta class was used before.
-     * if oldMc is not null, then newMc will be used only if he stored mc is
+     * if oldMc is not null, then newMc will be used only if the stored mc is
      * the same as oldMc
      */
     private void setMetaClass(Class theClass, MetaClass oldMc, MetaClass newMc) {
         final ClassInfo info = ClassInfo.getClassInfo(theClass);
-        
+
         MetaClass mc = null;
         info.lock();
         try {
@@ -295,17 +293,19 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
             fireConstantMetaClassUpdate(null, theClass, mc, newMc);
         }
     }
-    
+
+    @Override
     public void removeMetaClass(Class theClass) {
         setMetaClass(theClass, null, null);
     }
-    
+
     /**
      * Registers a new MetaClass in the registry to customize the type
      *
      * @param theClass
      * @param theMetaClass
      */
+    @Override
     public void setMetaClass(Class theClass, MetaClass theMetaClass) {
         setMetaClass(theClass,null,theMetaClass);
     }
@@ -323,7 +323,7 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
         finally {
             info.unlock();
         }
-        
+
         fireConstantMetaClassUpdate(obj, theClass, oldMC, theMetaClass);
     }
 
@@ -333,16 +333,17 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
     }
 
     private volatile MetaClassCreationHandle metaClassCreationHandle = new MetaClassCreationHandle();
-    
+
     /**
      * Gets a handle internally used to create MetaClass implementations
      * WARNING: experimental code, likely to change soon
      * @return the handle
-     */    
+     */
+    @Override
     public MetaClassCreationHandle getMetaClassCreationHandler() {
         return metaClassCreationHandle;
     }
-    
+
     /**
      * Sets a handle internally used to create MetaClass implementations.
      * When replacing the handle with a custom version, you should
@@ -351,28 +352,31 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
      * WARNING: experimental code, likely to change soon
      * @param handle the handle
      */
+    @Override
     public void setMetaClassCreationHandle(MetaClassCreationHandle handle) {
         if(handle == null) throw new IllegalArgumentException("Cannot set MetaClassCreationHandle to null value!");
         ClassInfo.clearModifiedExpandos();
         handle.setDisableCustomMetaClassLookup(metaClassCreationHandle.isDisableCustomMetaClassLookup());
         metaClassCreationHandle = handle;
-    }    
+    }
 
     /**
      * Adds a listener for constant meta classes.
      * @param listener the listener
      */
+    @Override
     public void addMetaClassRegistryChangeEventListener(MetaClassRegistryChangeEventListener listener) {
         synchronized (changeListenerList) {
             changeListenerList.add(listener);
         }
     }
-    
+
 
     /**
      * Adds a listener for constant meta classes. This listener cannot be removed!
      * @param listener the listener
      */
+    @Override
     public void addNonRemovableMetaClassRegistryChangeEventListener(MetaClassRegistryChangeEventListener listener) {
         synchronized (changeListenerList) {
             nonRemoveableChangeListenerList.add(listener);
@@ -383,6 +387,7 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
      * Removes a constant meta class listener.
      * @param listener the listener
      */
+    @Override
     public void removeMetaClassRegistryChangeEventListener(MetaClassRegistryChangeEventListener listener) {
         synchronized (changeListenerList) {
             changeListenerList.remove(listener);
@@ -402,14 +407,15 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
     protected void fireConstantMetaClassUpdate(Object obj, Class c, final MetaClass oldMC, MetaClass newMc) {
         MetaClassRegistryChangeEventListener[]  listener = getMetaClassRegistryChangeEventListeners();
         MetaClassRegistryChangeEvent cmcu = new MetaClassRegistryChangeEvent(this, obj, c, oldMC, newMc);
-        for (int i = 0; i<listener.length; i++) {
-            listener[i].updateConstantMetaClass(cmcu);
+        for (MetaClassRegistryChangeEventListener metaClassRegistryChangeEventListener : listener) {
+            metaClassRegistryChangeEventListener.updateConstantMetaClass(cmcu);
         }
     }
 
     /**
-     * Gets an array of of all registered ConstantMetaClassListener instances.
+     * Gets an array of all registered ConstantMetaClassListener instances.
      */
+    @Override
     public MetaClassRegistryChangeEventListener[] getMetaClassRegistryChangeEventListeners() {
         synchronized (changeListenerList) {
             ArrayList<MetaClassRegistryChangeEventListener> ret =
@@ -419,9 +425,9 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
             return ret.toArray(EMPTY_METACLASSREGISTRYCHANGEEVENTLISTENER_ARRAY);
         }
     }
-    
+
     /**
-     * Singleton of MetaClassRegistry. 
+     * Singleton of MetaClassRegistry.
      *
      * @param includeExtension
      * @return the registry
@@ -447,21 +453,22 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
     public FastArray getStaticMethods() {
         return staticMethods;
     }
-    
+
     /**
      * Returns an iterator to iterate over all constant meta classes.
      * This iterator can be seen as making a snapshot of the current state
      * of the registry. The snapshot will include all meta classes that has
-     * been used unless they are already collected. Collected meta classes 
+     * been used unless they are already collected. Collected meta classes
      * will be skipped automatically, so you can expect that each element
      * of the iteration is not null. Calling this method is thread safe, the
      * usage of the iterator is not.
-     *  
+     *
      * @return the iterator.
-     */    
+     */
+    @Override
     public Iterator iterator() {
         final MetaClass[] refs = metaClassInfo.toArray(EMPTY_METACLASS_ARRAY);
-        
+
         return new Iterator() {
             // index in the ref array
             private int index = 0;
@@ -472,6 +479,7 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
             // the cached hasNext call value
             private boolean hasNext = false;
 
+            @Override
             public boolean hasNext() {
                 if (hasNextCalled) return hasNext;
                 hasNextCalled = true;
@@ -484,19 +492,21 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
                 }
                 return hasNext;
             }
-            
+
             private void ensureNext() {
-                // we ensure that hasNext has been called before 
+                // we ensure that hasNext has been called before
                 // next is called
                 hasNext();
                 hasNextCalled = false;
             }
-            
+
+            @Override
             public Object next() {
                 ensureNext();
                 return currentMeta;
             }
-            
+
+            @Override
             public void remove() {
                 ensureNext();
                 setMetaClass(currentMeta.getTheClass(), currentMeta, null);
@@ -512,6 +522,7 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
             this.map = map;
         }
 
+        @Override
         public void onModule(final ExtensionModule module) {
             if (moduleRegistry.hasModule(module.getName())) {
                 ExtensionModule loadedModule = moduleRegistry.getModule(module.getName());
@@ -528,11 +539,7 @@ public class MetaClassRegistryImpl implements MetaClassRegistry{
             List<MetaMethod> metaMethods = module.getMetaMethods();
             for (MetaMethod metaMethod : metaMethods) {
                 CachedClass cachedClass = metaMethod.getDeclaringClass();
-                List<MetaMethod> methods = map.get(cachedClass);
-                if (methods == null) {
-                    methods = new ArrayList<MetaMethod>(4);
-                    map.put(cachedClass, methods);
-                }
+                List<MetaMethod> methods = map.computeIfAbsent(cachedClass, k -> new ArrayList<MetaMethod>(4));
                 methods.add(metaMethod);
                 if (metaMethod.isStatic()) {
                     staticMethods.add(metaMethod);
