@@ -20,6 +20,7 @@ package groovy.cli.picocli
 
 import groovy.cli.Option
 import groovy.cli.Unparsed
+import groovy.test.GroovyTestCase
 import groovy.transform.ToString
 import groovy.transform.TypeChecked
 import picocli.CommandLine.DuplicateOptionAnnotationsException
@@ -71,8 +72,8 @@ class CliBuilderTest extends GroovyTestCase {
         def expectedUsage = """Usage: $usageString
   -c, --encoding=<charset>   character encoding
   -h, --help                 usage information
-  -i=[<extension>]           modify files in place, create backup if extension is
-                               specified (e.g. '.bak')"""
+  -i=[<extension>]           modify files in place, create backup if extension
+                               is specified (e.g. '.bak')"""
         assertEquals(expectedUsage, stringWriter.toString().tokenize('\r\n').join('\n'))
         resetPrintWriter()
         cli.writer = printWriter
@@ -160,9 +161,9 @@ class CliBuilderTest extends GroovyTestCase {
         cli.parse([])
         // NB: This test is very fragile and is bound to fail on different locales and versions of commons-cli... :-(
         assert stringWriter.toString() == String.format(
-                "error: Missing required option '-x=PARAM'%n" +\
+                "error: Missing required option: '-x'%n" +\
                 "Usage: groovy -x%n" +\
-                "  -x           message%n")
+                "  -x     message%n")
     }
 
     void testLongOptsOnly_nonOptionShouldStopArgProcessing() {
@@ -523,8 +524,8 @@ class CliBuilderTest extends GroovyTestCase {
         cli.writer = printWriter
         options = cli.parse(['-abacus', 'foo'])
         assert options == null
-        assertTrue(stringWriter.toString().startsWith('error: Unmatched argument'))
-        assertTrue(stringWriter.toString().contains('-us'))
+        assertTrue(stringWriter.toString(), stringWriter.toString().startsWith('error: Unknown option'))
+        assertTrue(stringWriter.toString(), stringWriter.toString().contains('-us'))
     }
 
     void testMixedBurstingAndLongOptions_singleHyphen() {
@@ -555,6 +556,17 @@ class CliBuilderTest extends GroovyTestCase {
         assert !options.c
         assert options.d
         assert options.arguments() == ['foo']
+    }
+
+    // GROOVY-9528
+    void testRequiredParamsWithUnknownArgumentLikeParams() {
+        def cli = new CliBuilder()
+        cli.parser.stopAtPositional(false)
+        cli.parser.unmatchedOptionsArePositionalParams(true)
+        cli.a(type: String, longOpt: 'optA', required: true, args: 1, 'Option a (required)')
+        cli.c(type: String, longOpt: 'optC', required: true, args: 1, 'Option c (required)')
+        def opts = cli.parse('-a A -b B -c C'.split(' '))
+        assert opts.arguments() == ['-b', 'B']
     }
 
     interface PersonI {
@@ -896,7 +908,7 @@ class CliBuilderTest extends GroovyTestCase {
             h(longOpt: 'help', 'cli.option.help.description')
             V(longOpt: 'version', 'cli.option.version.description')
             pa(longOpt: 'parameters', 'cli.option.parameters.description')
-            i(longOpt: 'indy', 'cli.option.indy.description')
+            pr(longOpt: 'enable-preview', 'cli.option.preview.description')
             D(longOpt: 'define', args: 2, argName: 'name=value', valueSeparator: '=', 'cli.option.define.description')
             _(longOpt: 'configscript', args: 1, 'cli.option.configscript.description')
         }
@@ -913,21 +925,18 @@ class CliBuilderTest extends GroovyTestCase {
         assert !options.pa
         assert options.arguments() == ['-parameters']
 
-        assert cli.parse(['--indy']).indy
-        assert cli.parse(['--indy']).i
+        assert cli.parse(['--enable-preview']).'enable-preview'
+        assert cli.parse(['--enable-preview']).pr
+
         resetPrintWriter()
-        cli.writer = printWriter
-        assert cli.parse(['-indy']) == null
-        assertTrue(stringWriter.toString().startsWith('error: Unmatched argument'))
-        assertTrue(stringWriter.toString().contains('-ndy'))
 
         assert cli.parse(['--help']).help
         assert cli.parse(['--help']).h
         resetPrintWriter()
         cli.writer = printWriter
         assert cli.parse(['-help']) == null
-        assertTrue(stringWriter.toString().startsWith('error: Unmatched argument'))
-        assertTrue(stringWriter.toString().contains('-elp'))
+        assertTrue(stringWriter.toString(), stringWriter.toString().startsWith('error: Unknown option'))
+        assertTrue(stringWriter.toString(), stringWriter.toString().contains('-elp'))
 
         assert cli.parse(['--version']).version
         assert cli.parse(['--version']).V
@@ -951,7 +960,7 @@ class CliBuilderTest extends GroovyTestCase {
             h(longOpt: 'help', 'cli.option.help.description')
             V(longOpt: 'version', 'cli.option.version.description')
             pa(longOpt: 'parameters', 'cli.option.parameters.description')
-            i(longOpt: 'indy', 'cli.option.indy.description')
+            pr(longOpt: 'enable-preview', 'cli.option.preview.description')
             D(longOpt: 'define', args: 2, argName: 'name=value', valueSeparator: '=', 'cli.option.define.description')
             _(longOpt: 'configscript', args: 1, 'cli.option.configscript.description')
         }
@@ -964,9 +973,9 @@ class CliBuilderTest extends GroovyTestCase {
         assert cli.parse(['-parameters']).pa
         assert cli.parse(['-pa']).parameters
 
-        assert cli.parse(['--indy']).i
-        assert cli.parse(['-indy']).i
-        assert cli.parse(['-i']).indy
+        assert cli.parse(['--enable-preview']).'enable-preview'
+        assert cli.parse(['-enable-preview']).'enable-preview'
+        assert cli.parse(['-pr']).pr
 
         assert cli.parse(['--help']).h
         assert cli.parse(['-help']).h
@@ -1012,13 +1021,14 @@ class CliBuilderTest extends GroovyTestCase {
             h(longOpt: 'help', 'cli.option.help.description')
             V(longOpt: 'version', 'cli.option.version.description')
             pa(longOpt: 'parameters', 'cli.option.parameters.description')
-            i(longOpt: 'indy', 'cli.option.indy.description')
+            pr(longOpt: 'enable-preview', 'cli.option.preview.description')
             D(longOpt: 'define', args: 2, argName: 'String', valueSeparator: '=', 'cli.option.define.description')
             _(longOpt: 'configscript', args: 1, 'cli.option.configscript.description')
         }
         cli.usage()
         def expectedUsage = """\
-Usage: groovy [-hiV] [-cp] [-pa] [-configscript=PARAM] [-D=<String>=<String>]...
+Usage: groovy [-hV] [-cp] [-pa] [-pr] [-configscript=PARAM]
+              [-D=<String>=<String>]...
       -configscript, --configscript=PARAM
                             cli.option.configscript.description
       -cp, -classpath, --classpath
@@ -1026,9 +1036,10 @@ Usage: groovy [-hiV] [-cp] [-pa] [-configscript=PARAM] [-D=<String>=<String>]...
   -D, -define, --define=<String>=<String>
                             cli.option.define.description
   -h, -help, --help         cli.option.help.description
-  -i, -indy, --indy         cli.option.indy.description
       -pa, -parameters, --parameters
                             cli.option.parameters.description
+      -pr, -enable-preview, --enable-preview
+                            cli.option.preview.description
   -V, -version, --version   cli.option.version.description"""
         assertEquals(expectedUsage, stringWriter.toString().tokenize('\r\n').join('\n'))
 
@@ -1039,21 +1050,21 @@ Usage: groovy [-hiV] [-cp] [-pa] [-configscript=PARAM] [-D=<String>=<String>]...
             h(longOpt: 'help', 'cli.option.help.description')
             V(longOpt: 'version', 'cli.option.version.description')
             pa(longOpt: 'parameters', 'cli.option.parameters.description')
-            i(longOpt: 'indy', 'cli.option.indy.description')
+            pr(longOpt: 'enable-preview', 'cli.option.preview.description')
             D(longOpt: 'define', args: 2, argName: 'String', valueSeparator: '=', 'cli.option.define.description')
             _(longOpt: 'configscript', args: 1, 'cli.option.configscript.description')
         }
         cli.usage()
         expectedUsage = """\
-Usage: groovy [-hiV] [-cp] [-pa] [--configscript=PARAM]
+Usage: groovy [-hV] [-cp] [-pa] [-pr] [--configscript=PARAM]
               [-D=<String>=<String>]...
       --configscript=PARAM   cli.option.configscript.description
       -cp, --classpath       cli.option.cp.description
   -D, --define=<String>=<String>
                              cli.option.define.description
   -h, --help                 cli.option.help.description
-  -i, --indy                 cli.option.indy.description
       -pa, --parameters      cli.option.parameters.description
+      -pr, --enable-preview  cli.option.preview.description
   -V, --version              cli.option.version.description"""
         assertEquals(expectedUsage, stringWriter.toString().tokenize('\r\n').join('\n'))
     }
@@ -1064,4 +1075,27 @@ Usage: groovy [-hiV] [-cp] [-pa] [--configscript=PARAM]
         assertNull(optionAccessor)
     }
 
+    // GROOVY-9519
+    void testIntOptionWithDefaultZeroShouldNotConvertToBooleanFalse() {
+        def cli = new CliBuilder()
+        cli.i(type: Integer, longOpt: 'intTest', required: false, args: 1, defaultValue: '0', 'Testing integer with default value 0')
+
+        def opts = cli.parse([]) // no args, so defaults are applied
+        assert opts
+
+        assert Integer == opts.i.getClass()
+        assert opts.i == 0
+    }
+
+    // GROOVY-9599
+    void testStringOptionWithDefaultEmptyStringShouldNotConvertToFalseOrNullObject() {
+        def cli = new CliBuilder()
+        cli.s(type: String, longOpt: 'strTest', required: false, args: 1, defaultValue: '', 'Testing string with default empty string')
+
+        def opts = cli.parse([]) // no args, so defaults are applied
+        assert opts
+
+        assert String == opts.s.getClass()
+        assert opts.s == ''
+    }
 }
