@@ -33,6 +33,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.Writer;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.Date;
 import java.util.Map;
@@ -154,6 +155,7 @@ public class TemplateServlet extends AbstractHttpServlet {
             return true;
         }
 
+        @Override
         public String toString() {
             if (date == null) {
                 return "Hit #" + hit;
@@ -352,6 +354,7 @@ public class TemplateServlet extends AbstractHttpServlet {
      * @throws ServletException if this method encountered difficulties
      * @see TemplateServlet#initTemplateEngine(ServletConfig)
      */
+    @Override
     public void init(ServletConfig config) throws ServletException {
         super.init(config);
         this.engine = initTemplateEngine(config);
@@ -385,12 +388,12 @@ public class TemplateServlet extends AbstractHttpServlet {
             return new SimpleTemplateEngine();
         }
         try {
-            return (TemplateEngine) Class.forName(name).newInstance();
-        } catch (InstantiationException e) {
+            return Class.forName(name).asSubclass(TemplateEngine.class).getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | InvocationTargetException e) {
             log("Could not instantiate template engine: " + name, e);
         } catch (IllegalAccessException e) {
             log("Could not access template engine class: " + name, e);
-        } catch (ClassNotFoundException e) {
+        } catch (ClassNotFoundException | NoSuchMethodException e) {
             log("Could not find template engine class: " + name, e);
         }
         return null;
@@ -407,6 +410,7 @@ public class TemplateServlet extends AbstractHttpServlet {
      * @throws IOException      if an input or output error occurs while the servlet is handling the HTTP request
      * @throws ServletException if the HTTP request cannot be handled
      */
+    @Override
     public void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
         if (verbose) {
             log("Creating/getting cached template...");
