@@ -22,8 +22,7 @@ import groovy.lang.Closure;
 import groovy.lang.GroovyRuntimeException;
 import groovy.lang.Writable;
 import groovy.util.Node;
-import groovy.util.XmlNodePrinter;
-import groovy.util.slurpersupport.GPathResult;
+import groovy.xml.slurpersupport.GPathResult;
 import org.apache.groovy.io.StringBuilderWriter;
 import org.codehaus.groovy.runtime.InvokerHelper;
 import org.codehaus.groovy.runtime.StringGroovyMethods;
@@ -49,9 +48,9 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.io.StringReader;
-import java.io.UnsupportedEncodingException;
 import java.io.Writer;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 
 /**
  * Used for pretty printing XML content and other XML related utilities.
@@ -409,7 +408,7 @@ public class XmlUtil {
     private static String asString(GPathResult node) {
         // little bit of hackery to avoid Groovy dependency in this file
         try {
-            Object builder = ((Class) Class.forName("groovy.xml.StreamingMarkupBuilder")).newInstance();
+            Object builder = Class.forName("groovy.xml.StreamingMarkupBuilder").getDeclaredConstructor().newInstance();
             InvokerHelper.setProperty(builder, "encoding", "UTF-8");
             Writable w = (Writable) InvokerHelper.invokeMethod(builder, "bindNode", node);
             return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" + w.toString();
@@ -438,12 +437,7 @@ public class XmlUtil {
     }
 
     private static void serialize(Source source, OutputStream os) {
-        try {
-            serialize(source, new StreamResult(new OutputStreamWriter(os, "UTF-8")));
-        }
-        catch (UnsupportedEncodingException e) {
-            // ignore
-        }
+        serialize(source, new StreamResult(new OutputStreamWriter(os, StandardCharsets.UTF_8)));
     }
 
     private static void serialize(Source source, Writer w) {
